--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -35,6 +35,9 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
+FIAT-EQUIVELENT price charts are busted AGAIN (lol), fix them.
+
+
 Add "do not disturb - start" and "do not disturb - end" configuration settings to the recurring reminder plugin.
 
 
