--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4411,6 +4411,12 @@ primary currency market in the interface set to a currency different from the (a
 price charts primary currency market (I forgot they were two different settings when coding the filter).
 
 
+-Auto-install now backs up old bundled plugin configs before upgrading
+
+
+-Recurring reminder plugin now has an optional 'do not disturb' time period
+
+
 -Wrapped all app functions into classes (for unit testing / better PHP compatibility)
 
 
