"Rank" sort column on Portfolio page, displaying the marketcap rank
"Rank" sort column on Portfolio page, displaying the marketcap rank

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4457,6 +4457,39 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 
 
 
+-------------------------------------------------------------------
+4.29.3:
+
+
+-"Rank" sort column on Portfolio page, displaying the marketcap rank
+
+
+-Misc UX revisions
+
+
+v4.29.3 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE NAMES,
+SO YOU'LL NEED TO MIGRATE ANY CUSTOM CONFIGS OVER TO THE PROPER NAMES WHERE APPLICABLE!
+
+
+v4.29.3 and higher of this app HAS COMPLETELY RESTRUCTERED THE PLUGIN FILE NAMES! PLEASE
+MIGRATE ANY CUSTOM PLUGIN CONFIGS / FILES INTO THE NEW NAMES: 'plug-conf.php', 'plug-init.php',
+'plug-class.php'. THE AUTO-INSTALL SCRIPT WILL #AUTOMATICALLY MIGRATE# BUNDLED PLUGIN FILES 
+OVER TO THE NEW FILE NAMES (AND WILL BACKUP YOUR PREVIOUS BUNDLED PLUGIN CONFIGS).
+
+
+v4.27.0 and higher of this app RESETS ALL PLUGIN CACHES (A DIRECTORY STRUCTURE UPGRADE), 
+SO ANY PLUGIN ALERTS / TRACKING WILL BE RESET. THE !FIRST! PLUGIN RUNTIMES AFTER UPGRADING
+WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWARDS).
+
+
+-------------------------------------------------------------------
+
+
+
+
+
+
+
 
 
 
