--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4458,22 +4458,25 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 
 
 -------------------------------------------------------------------
-4.29.3:
+5.00.0:
 
 
 -"Rank" sort column on Portfolio page, displaying the marketcap rank
 
 
--More (coding) semantics overhauls
+-More coding cleanup / semantics overhauls
 
 
--(code) Nesting fixes after mass find/replace sessions
+-Nesting fixes (coding) after mass find/replace sessions
+
+
+-CoinSpot API support added
 
 
 -Misc UX revisions
 
 
-v4.30.0 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE NAMES,
+v5.00.0 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE NAMES,
 SO YOU'LL NEED TO MIGRATE ANY CUSTOM CONFIGS OVER TO THE PROPER NAMES WHERE APPLICABLE!
 
 
