--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4480,6 +4480,11 @@ v5.00.0 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE 
 SO YOU'LL NEED TO MIGRATE ANY CUSTOM CONFIGS OVER TO THE PROPER NAMES WHERE APPLICABLE!
 
 
+v5.00.0 and higher of this app RESETS ALL ALERTS CACHES (A DIRECTORY STRUCTURE UPGRADE), 
+SO ANY ALERTS WILL BE RESET (INCLUDING PLUGINS). THE !FIRST! RUNTIMES AFTER UPGRADING
+WILL AUTOMATICALLY PREFORM THE RESET (ALERTS WILL BE ACCURATE AFTERWARDS).
+
+
 v4.29.3 and higher of this app HAS COMPLETELY REFACTORED CONFIGURATION VARIABLE NAMES,
 SO YOU'LL NEED TO MIGRATE ANY CUSTOM CONFIGS OVER TO THE PROPER NAMES WHERE APPLICABLE!
 
