BUG FIX for price target alert plugin
BUG FIX for price target alert plugin

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4582,6 +4582,18 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 
 
 
+-------------------------------------------------------------------
+5.02.1:
+
+
+-BUG FIX for price target alert plugin
+
+
+-------------------------------------------------------------------
+
+
+
+
 
 
 
