--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -41,10 +41,14 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-Add https://watchtheburn.com/ to resources page.
+Prioritize building the admin interface / language translation modules / native app "desktop edition" (via PHPdesktop) above all other infrastructure. Then it's the most useful for the maximum number of people as it can be going forward.
 
 
-Add ENJ / MATIC kraken markets.
+Add opensea.com and watchtheburn.com to resources page.
+
+
+Add ENJ / MATIC kraken markets, and AXS coinbase markets.
+
 
 add this ticker API for CoinDCX exchange : https://public.coindcx.com/exchange/ticker from India ( https://github.com/taoteh1221/Open_Crypto_Portfolio_Tracker/issues/11#issuecomment-881934185 )
 
