UX / documentation / optimization
UX / documentation / optimization

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4600,7 +4600,13 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 5.03.0:
 
 
--Better UX for enabling pre-existing price alert options (stats data is kept current just like already-enabled price alerts)
+-Better UX for re-enabling pre-existing price alert options (any stale stats data is purged for disabled alerts)
+
+
+-Better misc. UX / documentation
+
+
+-Optimizations
 
 
 -------------------------------------------------------------------
