Better docs, revised todo, version bump
Better docs, revised todo, version bump

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4613,6 +4613,20 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 
 
 
+-------------------------------------------------------------------
+5.04.0:
+
+
+-Better misc. documentation
+
+
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
