--- a/DOCUMENTATION-ETC/TODO.txt
+++ b/DOCUMENTATION-ETC/TODO.txt
@@ -41,7 +41,13 @@ OPTIMIZATIONS / BUGS / TESTS / UX / QA / OTHER SECTION
 ///////////////////////////////////////////////////////
 
 
-Rename "cron runtime" to "cron core runtime", and create a "cron plugin runtime" telemetry value. Have it start / stop immediately before / after the cron plugins runtime loop logic.
+For the language translation cache (to avoid asking API for a translation if we already did once), include a hash digest of the original English text used to translate. That way if the hash changes for the current English text used (English is never translated as it's the default), we know we need to re-translate with a fresh API call, and also save the new hash digest of the current English text as well.
+
+
+Remove dead hitbtc market btc/data
+
+
+Rename "cron runtime" to "cron core runtime", to semantically describe it doesn't include cron plugin runtime telemetry (which isnt feasible to add to already-processed charting logic, relative to its usefullness).
 
 
 Prioritize building the admin interface / language translation modules / native app "desktop edition" (via PHPdesktop) above all other infrastructure. Then it's the most useful for the maximum number of people as it can be going forward.
