Plugin bug fix session 2
Plugin bug fix session 2

--- a/DOCUMENTATION-ETC/changelog.txt
+++ b/DOCUMENTATION-ETC/changelog.txt
@@ -4614,7 +4614,10 @@ WILL AUTOMATICALLY PREFORM THE RESET (ALERTS / TRACKING WILL BE ACCURATE AFTERWA
 
 
 -------------------------------------------------------------------
-5.04.0:
+5.03.1:
+
+
+-Bug fix for bundled "price-target-alert" plugin, crashing the plugin runtime
 
 
 -Better misc. documentation
